graphql-parser/tests/snapshots/tests__empty_union__parse_schema__unix.snap
---
source: graphql-parser/tests/tests.rs
expression: "format!(\"{}\\n---\\n{:#?}\", & input, & parse_schema_result)"
---
union UndefinedUnion

---
Ok(
    Document {
        definitions: [
            Type(
                Union(
                    UnionType {
                        position: Pos(1:1),
                        description: None,
                        name: "UndefinedUnion",
                        directives: [],
                        types: [],
                    },
                ),
            ),
        ],
    },
)
