graphql-parser/tests/snapshots/tests__empty_union__parse_schema__win.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Ok(
    Document {
        definitions: [
            Type(
                Union(
                    UnionType {
                        position: Pos(1:1),
                        description: None,
                        name: "UndefinedUnion",
                        directives: [],
                        types: [],
                    },
                ),
            ),
        ],
    },
)
